--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+
+:root{
+  --primary-color:rgb(42, 69, 42);
+  --secondary-color:rgb(33, 33, 33);
+  --tertiary-color:rgb(145, 145, 145);
+  --even-notes:rgb(255, 255, 116);
+  --odd-notes:rgb(163, 230, 255);
+  --text-color:rgb(240, 231, 231);
+  --board-text-color:rgb(23, 23, 23);
+  
+
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1,h2,h3,h4,h5,h6{
+font-family: 'Montserrat', sans-serif;
+text-align: center;
 }
