--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -21,3 +21,11 @@
     padding: 10px;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
+
+
+@media screen and (max-width:700px){
+    .board{
+        width: 100%;
+    }
+    
+}
