--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,6 +8,7 @@
     align-items: center;
     background-color: var(--secondary-color);
     color:var(--text-color);
+  
 }
 .search-wrapper{
     display: flex;
@@ -23,7 +24,7 @@
     display: flex;
     height: 100%;
     width: 100%;
-   
+
 
 }
 .search-box{
@@ -40,14 +41,30 @@
 }
 .search-btn{
     border: none;
+    background-color: rgb(213, 213, 213);
+    font-family: 'Montserrat', sans-serif;
+    font-weight:500;
 }
 .arc-btn{
     height: 100%;
     margin: 0 10px;
     outline: none;
     border: none;
+    background-color: rgb(213, 213, 213);
+    border-radius: 10px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight:500;
 }
 .search-btn:hover,.arc-btn:hover{
     background-color: var(--tertiary-color);
     font-weight: 700;
+}
+
+
+
+@media screen and (max-width:700px){
+    .search-wrapper{
+        width: 80%;
+    }
+    
 }
